--- a/cocoa-notify.cabal
+++ b/cocoa-notify.cabal
@@ -12,6 +12,7 @@ category:            Web
 build-type:          Simple
 -- extra-source-files:
 cabal-version:       >=1.10
+data-dir:            data
 
 flag build-examples
   default: False
@@ -33,6 +34,7 @@ library
   default-language:    Haskell2010
   ghc-options:         -Wall
   frameworks:          Foundation
+                       AppKit
 
 executable hello-notify
   if flag(build-examples)
@@ -43,6 +45,8 @@ executable hello-notify
   Main-is:             hello-notify.hs
   build-depends:       base
                      , cocoa-notify
+                     , bytestring
+                     , file-embed
   default-language:    Haskell2010
   ghc-options:         -Wall
 
